# 30DaysChallenges

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  reporte(Output).csv  reporte.csv  reporte.xls
chart/2025/: Readme.md
chart/2025/day08/: hist.ipynb
chart/2025/day09/: diverg.ipynb
chart/2025/day09/data/: deptos_data.csv
chart/2025/day11/: stripes.ipynb
chart/2025/day24/: who_data.ipynb
nb/: charts.ipynb
