[project]
name = "30dayschallenges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geemap>=0.35.3",
    "geopandas>=1.0.1",
    "localtileserver>=0.10.6",
    "matplotlib>=3.10.1",
    "owslib>=0.33.0",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "setuptools>=78.1.0",
]
